fixed spacing and logo quality on quiz home page

--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top:5em;
 }
 
 .header {
@@ -29,8 +30,7 @@
 .img {
     display: flex;
     justify-content: center;
-    width: 23rem;
-    height: 20rem;
+    object-fit:contain;
 }
 
 .optionContainer {
@@ -65,10 +65,4 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-}
-
-.resultContainer {
-    background-color:var(--primary-light-spice);
-    box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);
-    text-align:left;
 }
